simulation_files = files(
	'Air.cpp',
	'CompressibleGases.cpp',
	'Element.cpp',
	'ElementClasses.cpp',
	'GOLString.cpp',
	'Gravity.cpp',
	'Hydrocarbon.cpp',
	'Particle.cpp',
	'SaveRenderer.cpp',
	'Sign.cpp',
	'SimTool.cpp',
	'SimulationData.cpp',
	'ToolClasses.cpp',
	'Simulation.cpp',
	'SnapshotDelta.cpp',
)

subdir('elements')
subdir('simtools')

powder_files += simulation_files
render_files += simulation_files
